src/static/styles/main.scss
@import '@atb/theme/theme.css';
@import '@atb/theme/typography.css';

// Extra settings in addition to shared theme.
:root {
    --ws-icon-size-xLarge: 2.5rem;

    --ws-colors-primary_2-backgroundColor--transparent: rgba(0, 124, 146, 0.2);
}
@media (max-width: 400px) {
    :root {
        --ws-icon-size-xLarge: 1.75rem;
    }
}

html {
    box-sizing: border-box;
}
*,
*:before,
*:after {
    box-sizing: inherit;
}

* {
    margin: 0;
    padding: 0;
}

html {
    // Use browsers default font size.
    font-size: 100%;
}

html,
body {
    min-height: 100vh;
}

body {
    margin: 0;
    color: var(--colors-background_1-color);
    background-color: var(--colors-background_1-backgroundColor);
}

body.menuOpen {
    overflow: hidden;
}

input,
select,
button {
    font-family: var(--font-main);
    // Explicitly set font size as 16px to avoid mobile zoom on focus.
    font-size: 1rem;
    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
}

.light,
.dark {
    --maxPageWidth: 1024px;
    --contentPadding: var(--spacings-xLarge);
}

@media (max-width: 650px) {
    .light,
    .dark {
        --spacings-xLarge: 1.125rem;
        --spacings-large: 1rem;

        --contentPadding: 0;
    }
}

.container {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: var(--colors-background_1-color);
    background-color: var(--colors-background_1-backgroundColor);

    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
}

.app {
    flex: 1;
    position: relative;
    background: url('../assets/images/background-illustration.svg') no-repeat
        center top;
    background-size: 100%;
}

.content {
    position: relative;
    margin: auto;
    padding: var(--contentPadding);
    max-width: var(--maxPageWidth);
}

a {
    color: var(--text-colors-primary);
    text-decoration: underline;
}

a:hover {
    text-decoration: none;
}

p {
    margin: 0;
    padding: 0;

    font-size: var(--baseTypo-body__primary-fontSize, 1rem);
    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
}
p + p {
    margin-top: var(--spacings-medium);
}

.pageHeader {
    background-color: var(--colors-background_accent-backgroundColor);
}
.pageHeader__content {
    width: 100%;
    max-width: var(--maxPageWidth);
    margin: 0 auto;
    padding: 0 var(--contentPadding);
    display: flex;
}
.pageHeader__inner {
    display: flex;
    background-color: var(--colors-background_accent-backgroundColor);
    position: relative;
    z-index: 250;
}
.pageHeader__logo {
    padding: 0;
    margin: 0;
    margin-right: var(--spacings-medium);
}
.pageHeader__logo a {
    display: flex;
    align-items: center;
    white-space: nowrap;
    padding: var(--spacings-medium);
    padding-left: 0;

    img {
        display: block;
        height: 1.25rem;
        margin-right: var(--spacings-medium);
    }
}
.pageHeader__nav {
    flex: 1;
    display: flex;

    transition: transform 250ms ease-in;
}
.pageHeader__nav nav {
    flex: 1;
    display: flex;
}
.pageHeader__nav ul {
    display: flex;
    list-style: none;
    padding: 0;
    margin: 0;
    align-items: center;
    flex: 1;
}
.pageHeader__nav li:last-child {
    margin-left: auto;
}
.pageHeader__nav__item--active {
    border-radius: var(--border-radius-regular);
    background: var(--ws-colors-primary_2-backgroundColor--transparent);
}
.pageHeader__nav a {
    display: block;
    padding: var(--spacings-medium);
}
.pageHeader__toggleButton {
    display: none;
    margin-left: auto;
}
.pageHeader__nav__logout {
    background: transparent;
    border: 0;
    cursor: pointer;
    display: flex;
    align-items: center;

    svg {
        margin-left: var(--spacings-small);
    }
    svg,
    path {
        fill: currentColor;
    }
}

@media (max-width: 850px) {
    .pageHeader__inner {
        flex: 1;
    }

    .pageHeader__toggleButton {
        display: block;
    }

    .pageHeader__nav {
        position: absolute;
        transform: translateY(-100%);
        top: 2.75rem;
        left: 0;
        bottom: 0;
        width: 100%;
        z-index: 100;

        align-items: flex-start;
    }
    .pageHeader__nav::after {
        background: rgba(0, 0, 0, 0.4);
        content: '';
        display: block;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;

        opacity: 0;
        transition: opacity 150ms ease-in;
    }

    .pageHeader__nav nav {
        position: relative;
        z-index: 150;
        background-color: var(--colors-background_accent-backgroundColor);
    }

    .pageHeader__nav ul {
        flex-direction: column;
        justify-content: space-around;

        max-height: 40rem;
        align-items: stretch;
        padding: var(--contentPadding);
    }
    .pageHeader__nav li:last-child {
        margin: 0;
    }
    .pageHeader__nav__logout {
        display: flex;
        width: 100%;
        padding: var(--spacings-medium);

        svg {
            margin-left: auto;
        }
    }

    .pageHeader__nav[open] {
        transform: translateY(0);
    }
    .pageHeader__nav[open]::after {
        opacity: 1;
        transition-delay: 150ms;
    }
}

.pageHeader__content a,
.pageHeader__nav__logout {
    font-size: var(--baseTypo-body__primary-fontSize, 1rem);
    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
    color: var(--colors-primary_2-color);
    text-decoration: none;
    transition: all 150ms ease;
}
.pageHeader__content a:hover,
.pageHeader__nav__logout:hover {
    opacity: 0.6;
}

.validityWarning {
    background: var(--status-info-main-backgroundColor);
    color: var(--status-info-main-color);
}
.validityWarning__inner {
    display: flex;
    align-items: center;

    margin: auto;
    max-width: var(--maxPageWidth);
    padding: var(--spacings-medium) var(--contentPadding);

    > svg {
        width: var(--icon-size-normal);
        height: var(--icon-size-normal);
        margin-right: var(--spacings-medium);

        path {
            fill: currentColor;
        }
    }
}
.validityWarning__button {
    background: transparent;
    border: 0;
    font-size: var(--baseTypo-body__primary-fontSize, 1rem);
    cursor: pointer;
    padding: var(--spacings-small) 0;
    padding-left: var(--spacings-large);
    transition: opacity 150ms ease-in;

    margin-left: auto;

    svg {
        width: var(--icon-size-small);
        height: var(--icon-size-small);

        display: block;
        path {
            fill: currentColor;
        }
    }
}
.validityWarning__button:hover {
    opacity: 0.6;
}
.validityWarning__button:active {
    opacity: 0.4;
}

.authErrorBox {
    position: absolute;
    width: 100%;
    top: 0;

    background: var(--colors-primary_destructive-backgroundColor);
    transition: transform 150ms ease-in;
    transform: translateY(-100%);

    z-index: 300;
}
.authErrorBox--active {
    transform: translateY(0);
}
.authErrorBox__content {
    max-width: var(--maxPageWidth);
    margin: 0 auto;
}

// Page layouts

.page {
    display: grid;
    grid-gap: var(--spacings-xLarge);
    grid-template-columns: 2fr 1fr;
    padding-bottom: 5rem;

    input[type='time'],
    input[type='date'] {
        box-shadow: none;
        outline: none;
        border: none;
        background: inherit;
    }
}
.page > :only-child {
    grid-column: 1/-1;
}
.page--narrow {
    max-width: 22.5rem;
    margin: 3.25rem auto;
    grid-template-columns: 1fr;
}
.page--threeColumns {
    grid-template-columns: 1fr 1fr 1fr;
}

.page--overview,
.page--history {
    grid-template-columns: 1fr 2fr;
}
.pageOverview__empty {
    text-align: center;

    img {
        display: block;
        margin: var(--spacings-xLarge) auto;
    }
}

.accountInfo__item {
    display: flex;
    svg {
        display: block;
        margin-right: var(--spacings-medium);
    }
    svg,
    path {
        fill: currentColor;
    }
}

.shop__summaryPrice {
    font-size: 2rem;
    line-height: 1;
    display: flex;
    align-items: baseline;
    small {
        font-size: 1rem;
    }
}

// Summary page

.summaryPage__horizontal {
    display: flex;
    justify-content: space-between;
}

.shopPage__separator {
    margin: var(--spacings-large) 0;
    border-color: var(--border-secondary);
    border-top: 0;
}

// Basic responsiveness for pages

@media (max-width: 768px) {
    main {
        padding: var(--spacings-medium);
    }

    .page {
        grid-template-columns: 1fr;
    }

    .pageHeader__logo a {
        padding: var(--spacings-medium);
    }

    .validityWarning__inner {
        padding: var(--spacings-medium);
    }
}

.pageLogin__header {
    position: absolute;
    width: 100%;
    top: var(--spacings-xLarge);
}
.pageLogin__illustration {
    display: block;
    margin: 0 auto;
    max-width: 100%;
}
.pageLogin__infoItem {
    display: flex;
    align-items: center;

    svg {
        margin: var(--spacings-large);
        display: block;
    }
}
.pageLogin__infoItem__content {
    padding: var(--spacings-large);
}

.pageAccount__noTravelCard {
    display: flex;

    svg {
        flex-shrink: 0;
        display: block;
        margin-right: var(--spacings-medium);
    }
}

.pageAccount__recurringPayment__expiry {
    padding-top: var(--spacings-medium);
}

// Components

.metadata-list {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 12px;
}

.ticket-list {
    width: 100%;
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    grid-gap: 12px;
}

dl {
    margin-bottom: 1rem;
}

dl dt {
    float: left;
    font-weight: normal;
    margin-right: 0.25rem;
    padding: 0.25rem;
    width: 100px;
    text-align: right;
}

dl dd {
    margin: 0;
    padding: 0;
}

table {
    border-collapse: collapse;
    margin: 1rem 0;

    th,
    td {
        padding: 0.5rem;
        border: 1px solid #345d63;
    }
}

.onboarding__travelCard {
    max-width: 41.5rem;
    margin: 0 auto;

    position: relative;
}
.onboarding__travelCard__input {
    padding-left: calc(2rem + var(--spacings-xLarge));

    background: url('../assets/images/travelcard-help-icons.svg') left center
        no-repeat;
    margin-bottom: calc(2 * var(--spacings-xLarge));
}

@media (max-width: 600px) {
    .onboarding__travelCard__input {
        padding-left: 0;
        background: none;
        grid-template-columns: 1fr;
    }
}
.onboarding__travelCard__illustration {
    width: 100%;
    display: block;
}
.onboarding__appIllustration {
    display: block;
    margin: 0 auto;
    max-width: 100%;
}
.onboarding__badgeButtons {
    margin-top: var(--spacings-xLarge);
    display: flex;
    justify-content: center;
    gap: var(--spacings-xLarge);
    flex-wrap: wrap;
}

@import 'waiting';
@import 'ui';

